# ranger

./: .gitignore  README.md  README.rst
cpp/: CMakeLists.txt  format-code.sh  readme.md  run.sh
cpp/dev/foxglove-sdk/: main.py  output.mcap  stream.py  write-mcap.py
cpp/dev/protobuf/: CMakeLists.txt  mcap-protobuf-read.cpp  mcap-protobuf-write.cpp  pose.pb.cc  pose.pb.h  pose.proto
cpp/protobuf/: LaserScan.proto
cpp/src/: colors.hpp  common.h  dummy_imu.cpp  dummy_lidar.cpp  esc.cpp  gaussian_noise.h  imu.cpp  lidar.cpp  main.cpp  noise.cpp  read_msg.cpp
dev/esc/: CMakeLists.txt  esc.cpp
dev/esc-pigpio/: CMakeLists.txt
dev/esc-trinket/: code.py
dev/itsybitsy-M4/: code.py
dev/smc/: test.py
docs/: architecture.md
docs/axial/: readme.md
docs/ideas/: info.txt
docs/ipython/: cal.npy  calibrate.ipynb  color_tracking.ipynb  wolfram.ipynb
linux_scripts/: i2c_buadrate.sh
mechanical/: 32p-ring.scad  bumper.scad  rc-xd-2.scad  rc-xd-3.scad  rc-xd-4.scad  rc-xd-5.scad  rc-xd.scad  wheels.scad
mechanical/fusion360-modular/: shock-left.3mf  shock-right.3mf  side-wall.3mf  skid-braket.3mf  u-bumper-2.3mf
mechanical/open_scad_old/: base.scad  rc-xd-2-proj.3mf  rc-xd-2.scad  rc-xd-4.scad  rc-xd.old.scad  screws.scad
mechanical/open_scad_old/stl/: base-v1.stl  bumper.stl  rc-xd-2-1.stl  rc-xd-2.stl  rc-xd-4-v1.stl  rc-xd.stl
mechanical/stl/: 32p-ring.stl  base-v2.stl  holes.stl  rc-xd-3-v1.stl  rc-xd-3.stl  rc-xd-5-v1.stl
pico/: CMakeLists.txt  format-code.sh  load.sh
pico/src/: defs.hpp  lwipopts.h  main.cpp  memory.hpp
pico/src/robotlib/: car.hpp  esc.hpp  flags.hpp
software/arduino/esc_test/: esc_test.ino
software/microcontroller/: esc.hpp  microcontroller.ino
software/sensors/: sensors.ino
